// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render device dashboard 1`] = `
.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c3:hover,
.c3:focus {
  background: #B29DFF;
}

.c3:active {
  background: #C5B6FF;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c16:hover,
.c16:focus {
  background: rgba(255,255,255,0.07);
}

.c16:active {
  background: rgba(255,255,255,0.13);
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c14 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c11 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c11 > thead > tr > th,
.c11 > tbody > tr > th,
.c11 > tfoot > tr > th,
.c11 > thead > tr > td,
.c11 > tbody > tr > td,
.c11 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c11 > thead > tr > th:first-child,
.c11 > tbody > tr > th:first-child,
.c11 > tfoot > tr > th:first-child,
.c11 > thead > tr > td:first-child,
.c11 > tbody > tr > td:first-child,
.c11 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c11 > thead > tr > th:last-child,
.c11 > tbody > tr > th:last-child,
.c11 > tfoot > tr > th:last-child,
.c11 > thead > tr > td:last-child,
.c11 > tbody > tr > td:last-child,
.c11 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c11 > tbody > tr > td {
  vertical-align: middle;
}

.c11 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c11 > thead > tr > th .c13 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c11 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c11 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c11 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c10 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c9 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c7 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c6 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c8 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c8:hover,
.c8:focus,
.c8:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c8::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c12 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Two-Factor Devices
    </div>
    <button
      class="c3"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c4"
  >
    <nav
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <input
            class="c8"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c9"
          >
            <div
              class="c10"
            />
          </div>
        </div>
      </div>
    </nav>
    <table
      class="c11 c12"
      style="max-width: 100%;"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Type
          </th>
          <th
            style="cursor: default;"
          >
            Device Name
          </th>
          <th>
            <a>
              Registered
              <span
                class="c13 c14 icon icon-chevron-down "
                title="sort items desc"
              />
            </a>
          </th>
          <th>
            <a>
              Last Used
              <span
                class="c13 c14 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Authenticator App
          </td>
          <td
            title="iphone 12"
          >
            <div
              class="c15"
              style="max-width: 96px; white-space: nowrap;"
            >
              iphone 12
            </div>
          </td>
          <td>
            2021-08-12
          </td>
          <td>
            2021-08-12
          </td>
          <td
            align="right"
          >
            <button
              class="c16"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="solokey"
          >
            <div
              class="c15"
              style="max-width: 96px; white-space: nowrap;"
            >
              solokey
            </div>
          </td>
          <td>
            2021-06-15
          </td>
          <td>
            2021-06-18
          </td>
          <td
            align="right"
          >
            <button
              class="c16"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="backup yubikey"
          >
            <div
              class="c15"
              style="max-width: 96px; white-space: nowrap;"
            >
              backup yubikey
            </div>
          </td>
          <td>
            2021-04-18
          </td>
          <td>
            2021-07-16
          </td>
          <td
            align="right"
          >
            <button
              class="c16"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="yubikey"
          >
            <div
              class="c15"
              style="max-width: 96px; white-space: nowrap;"
            >
              yubikey
            </div>
          </td>
          <td>
            2021-02-05
          </td>
          <td>
            2021-02-28
          </td>
          <td
            align="right"
          >
            <button
              class="c16"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render failed state for creating restricted privilege token 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-bottom: 16px;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c3:hover,
.c3:focus {
  background: #B29DFF;
}

.c3:active {
  background: #C5B6FF;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c17:hover,
.c17:focus {
  background: rgba(255,255,255,0.07);
}

.c17:active {
  background: rgba(255,255,255,0.13);
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c15 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c12 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c12 > thead > tr > th,
.c12 > tbody > tr > th,
.c12 > tfoot > tr > th,
.c12 > thead > tr > td,
.c12 > tbody > tr > td,
.c12 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c12 > thead > tr > th:first-child,
.c12 > tbody > tr > th:first-child,
.c12 > tfoot > tr > th:first-child,
.c12 > thead > tr > td:first-child,
.c12 > tbody > tr > td:first-child,
.c12 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c12 > thead > tr > th:last-child,
.c12 > tbody > tr > th:last-child,
.c12 > tfoot > tr > th:last-child,
.c12 > thead > tr > td:last-child,
.c12 > tbody > tr > td:last-child,
.c12 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c12 > tbody > tr > td {
  vertical-align: middle;
}

.c12 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c12 > thead > tr > th .c14 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c12 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c12 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c12 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c6 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c5 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c11 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c10 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c8 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c7 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c9 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c9:hover,
.c9:focus,
.c9:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c13 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Two-Factor Devices
    </div>
    <button
      class="c3"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c4"
    kind="danger"
  >
    failed to create privilege token
  </div>
  <div
    class="c5"
  >
    <nav
      class="c6"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <input
            class="c9"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c10"
          >
            <div
              class="c11"
            />
          </div>
        </div>
      </div>
    </nav>
    <table
      class="c12 c13"
      style="max-width: 100%;"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Type
          </th>
          <th
            style="cursor: default;"
          >
            Device Name
          </th>
          <th>
            <a>
              Registered
              <span
                class="c14 c15 icon icon-chevron-down "
                title="sort items desc"
              />
            </a>
          </th>
          <th>
            <a>
              Last Used
              <span
                class="c14 c15 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Authenticator App
          </td>
          <td
            title="iphone 12"
          >
            <div
              class="c16"
              style="max-width: 96px; white-space: nowrap;"
            >
              iphone 12
            </div>
          </td>
          <td>
            2021-08-12
          </td>
          <td>
            2021-08-12
          </td>
          <td
            align="right"
          >
            <button
              class="c17"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="solokey"
          >
            <div
              class="c16"
              style="max-width: 96px; white-space: nowrap;"
            >
              solokey
            </div>
          </td>
          <td>
            2021-06-15
          </td>
          <td>
            2021-06-18
          </td>
          <td
            align="right"
          >
            <button
              class="c17"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="backup yubikey"
          >
            <div
              class="c16"
              style="max-width: 96px; white-space: nowrap;"
            >
              backup yubikey
            </div>
          </td>
          <td>
            2021-04-18
          </td>
          <td>
            2021-07-16
          </td>
          <td
            align="right"
          >
            <button
              class="c17"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="yubikey"
          >
            <div
              class="c16"
              style="max-width: 96px; white-space: nowrap;"
            >
              yubikey
            </div>
          </td>
          <td>
            2021-02-05
          </td>
          <td>
            2021-02-28
          </td>
          <td
            align="right"
          >
            <button
              class="c17"
              kind="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render failed state for fetching devices 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-bottom: 16px;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c3:hover,
.c3:focus {
  background: #B29DFF;
}

.c3:active {
  background: #C5B6FF;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Two-Factor Devices
    </div>
    <button
      class="c3"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c4"
    kind="danger"
  >
    failed to fetch devices
  </div>
</div>
`;
